
# Note: This crate must be built using build.sh

[package]
name = "tictactoe"
version = "0.1.0"
description = "TicTacToe program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
solana-sdk-bpf-utils = { path = "../node_modules/@solana/web3.js/bpf-sdk/rust/rust-utils" }
solana-sdk-bpf-no-std = { path = "../node_modules/@solana/web3.js/bpf-sdk/rust/rust-no-std" }

[dev_dependencies]
solana-sdk-bpf-test = { path = "../node_modules/@solana/web3.js/bpf-sdk/rust/rust-test" }

[workspace]
members = []

[lib]
name = "tictactoe"
crate-type = ["cdylib"]
