
# Note: This crate must be built using build.sh

[package]
name = "tictactoe"
version = "0.1.0"
description = "TicTacToe program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
serde = { version = "1.0.100", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false }
thiserror = "1.0"

[dev_dependencies]
solana-sdk-bpf-test = { path = "../node_modules/@solana/web3.js/bpf-sdk/rust/test"}

[features]
program = ["solana-sdk/program"]
default = ["program"]

[workspace]
members = []

[lib]
name = "tictactoe"
crate-type = ["cdylib"]
