[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
license = "MIT"

[dependencies]
bincode = "1.0.0"
log = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
simple_logger = "1.0.1"
#solana-sdk = { path = "../../solana/sdk", version = "0.11.0" }
solana-sdk = "0.16.0"

[lib]
name = "tictactoe"
crate-type = ["cdylib"]
